--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
+    /* margin: 0;
+    padding: 0; */
+    /* display: flex; */
+    /* justify-content: center; */
     align-items: center;
     min-height: 100vh; /* change height to min-height */
     background: rgb(247, 255, 255);
@@ -11,14 +11,15 @@ body {
     background-attachment: fixed;
 }
 
-.container {
-    margin-top: 00px; /* Adjust margin as needed */
+/* .container {
+    margin-top: 00px; 
     background-color: #fff;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 80%;
     max-width: 600px;
-}
+} */
+
 .header_container_Center{
     text-align: center;
 }
@@ -28,9 +29,9 @@ body {
     height: auto;
 }
 
-h1, h2, h3 {
+/* h1, h2, h3 {
     margin: 10px 0;
-}
+} */
 
 form {
     display: flex;
